Update usage in README